--- a/views/Signup.ejs
+++ b/views/Signup.ejs
@@ -65,7 +65,7 @@
               </div>
               <div class="u-form-group u-form-password u-label-top">
                 <label for="password-a30d" class="u-label u-text-grey-30 u-label-4">Password *</label>
-                <input type="text" placeholder="Enter your Password" id="password-a30d" name="password" class="u-border-10 u-border-grey-10 u-grey-10 u-input u-input-rectangle u-radius-50 u-input-4" required="">
+                <input type="password" placeholder="Enter your Password" id="password-a30d" name="password" class="u-border-10 u-border-grey-10 u-grey-10 u-input u-input-rectangle u-radius-50 u-input-4" required="">
               </div>
               <div class="u-form-checkbox u-form-group u-label-top">
                 <input type="checkbox" id="checkbox-a30d" name="remember" value="On" class="u-field-input">
