--- a/views/Student-Info.ejs
+++ b/views/Student-Info.ejs
@@ -26,7 +26,7 @@
     <meta property="og:type" content="website">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
   <body data-path-to-root="./" data-include-products="false" class="u-body u-xl-mode" data-lang="en"><header class="u-clearfix u-grey-5 u-header u-header" id="sec-4ddd"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <a href="Admin-page.html" class="u-image u-logo u-image-1" data-image-width="250" data-image-height="400">
+        <a href="/admin" class="u-image u-logo u-image-1" data-image-width="250" data-image-height="400">
           <img src="images/f598ee10179fe7a47ffea40ce625b21d.png" class="u-logo-image u-logo-image-1">
         </a>
         <nav class="u-menu u-menu-one-level u-offcanvas u-menu-1" data-responsive-from="MD">
@@ -38,10 +38,10 @@
             </a>
           </div>
           <div class="u-custom-menu u-nav-container">
-            <ul class="u-nav u-spacing-2 u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-border-2 u-border-active-black u-border-hover-black u-button-style u-nav-link u-text-active-grey-90 u-text-grey-90 u-text-hover-grey-90" href="Admin-page.html" style="padding: 10px 20px;">ADMIN PAGE</a>
-</li><li class="u-nav-item"><a class="u-border-2 u-border-active-black u-border-hover-black u-button-style u-nav-link u-text-active-grey-90 u-text-grey-90 u-text-hover-grey-90" href="Student-Info.html" target="_blank" style="padding: 10px 20px;">ADD STUDENT INFO</a>
-</li><li class="u-nav-item"><a class="u-border-2 u-border-active-black u-border-hover-black u-button-style u-nav-link u-text-active-grey-90 u-text-grey-90 u-text-hover-grey-90" href="company-info.html" style="padding: 10px 20px;">ADD COMAPNY INFO</a>
-</li><li class="u-nav-item"><a class="u-border-2 u-border-active-black u-border-hover-black u-button-style u-nav-link u-text-active-grey-90 u-text-grey-90 u-text-hover-grey-90" href="#" style="padding: 10px 20px;">VEIW SHORTLISTED STUDENTS</a>
+            <ul class="u-nav u-spacing-2 u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-border-2 u-border-active-black u-border-hover-black u-button-style u-nav-link u-text-active-grey-90 u-text-grey-90 u-text-hover-grey-90" href="/admin" style="padding: 10px 20px;">ADMIN PAGE</a>
+</li><li class="u-nav-item"><a class="u-border-2 u-border-active-black u-border-hover-black u-button-style u-nav-link u-text-active-grey-90 u-text-grey-90 u-text-hover-grey-90" href="/studentinfo" target="_blank" style="padding: 10px 20px;">ADD STUDENT INFO</a>
+</li><li class="u-nav-item"><a class="u-border-2 u-border-active-black u-border-hover-black u-button-style u-nav-link u-text-active-grey-90 u-text-grey-90 u-text-hover-grey-90" href="/addcompany" style="padding: 10px 20px;">ADD COMAPNY INFO</a>
+</li><li class="u-nav-item"><a class="u-border-2 u-border-active-black u-border-hover-black u-button-style u-nav-link u-text-active-grey-90 u-text-grey-90 u-text-hover-grey-90" href="/admin" style="padding: 10px 20px;">VEIW SHORTLISTED STUDENTS</a>
 </li></ul>
           </div>
           <div class="u-custom-menu u-nav-container-collapse">
