--- a/views/Admin-page.ejs
+++ b/views/Admin-page.ejs
@@ -27,7 +27,7 @@
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
   <body data-path-to-root="./" data-include-products="false" class="u-body u-xl-mode" data-lang="en">
     <header class="u-clearfix u-grey-5 u-header u-header" id="sec-4ddd"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-       <div style="display: flex;"> <a href="Admin-page.html" class="u-image u-logo u-image-1" data-image-width="250" data-image-height="400">
+       <div style="display: flex;"> <a href="/admin" class="u-image u-logo u-image-1" data-image-width="250" data-image-height="400">
           <img src="images/f598ee10179fe7a47ffea40ce625b21d.png" class="u-logo-image u-logo-image-1">
         </a>
         <a href="/logout" class="u-border-2 u-border-active-white u-border-grey-75 u-border-hover-black u-btn u-btn-round u-button-style u-palette-2-base u-radius u-btn-1">Logout</a>      </div>
