--- a/views/Login.ejs
+++ b/views/Login.ejs
@@ -26,7 +26,7 @@
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
   <body data-path-to-root="./" data-include-products="false" class="u-body u-xl-mode" data-lang="en"><header class="u-clearfix u-grey-5 u-header u-header" id="sec-4ddd"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <div class="u-border-3 u-border-grey-dark-1 u-line u-line-vertical u-line-1"></div>
-        <a href="https://Divyansh.com" class="u-image u-logo u-image-1" data-image-width="250" data-image-height="400">
+        <a href="/login" class="u-image u-logo u-image-1" data-image-width="250" data-image-height="400">
           <img src="images/f598ee10179fe7a47ffea40ce625b21d.png" class="u-logo-image u-logo-image-1">
         </a>
         <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1" data-responsive-from="MD">
